# test-workspace

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contracts/c1/: Cargo.toml  Makefile  README.md
contracts/c1/c1-dbg/: Cargo.toml  README.md
contracts/c1/c1-dbg/src/: lib.rs
contracts/c1/src/: lib.rs  main.rs
contracts/c2-dbg/: Cargo.toml  Makefile  README.md
contracts/c2-dbg/c2-dbg-dbg/: Cargo.toml  README.md
contracts/c2-dbg/c2-dbg-dbg/src/: lib.rs
contracts/c2-dbg/src/: lib.rs  main.rs
contracts/c3-sim/: Cargo.toml  Makefile  README.md
contracts/c3-sim/c3-sim-dbg/: Cargo.toml  README.md
contracts/c3-sim/c3-sim-dbg/src/: lib.rs
contracts/c3-sim/src/: main.rs
contracts/exec-child/: Cargo.toml  Makefile
contracts/exec-child/exec-child-dbg/: Cargo.toml  README.md
contracts/exec-child/src/: main.rs
contracts/exec-parent/: Cargo.toml  Makefile
contracts/exec-parent/exec-parent-dbg/: Cargo.toml  README.md
contracts/exec-parent/src/: main.rs
contracts/spawn-child/: Cargo.toml  Makefile
contracts/spawn-child/spawn-child-dbg/: Cargo.toml  README.md
contracts/spawn-child/src/: main.rs
contracts/spawn-parent/: Cargo.toml  Makefile
contracts/spawn-parent/spawn-parent-dbg/: Cargo.toml  README.md
contracts/spawn-parent/src/: main.rs
native-simulators/exec-child-sim/: Cargo.toml
native-simulators/exec-parent-sim/: Cargo.toml
native-simulators/spawn-child-sim/: Cargo.toml
native-simulators/spawn-parent-sim/: Cargo.toml
scripts/: add-debugger
tests/: Cargo.toml
tests/src/: tests.rs
