[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/spawn-child",
  "contracts/spawn-parent",
  "contracts/exec-child",
  "contracts/exec-parent",
  "tests",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1

[replace]
"ckb-std:0.15.3" = { git = "https://github.com/nervosnetwork/ckb-std.git", branch = "master" }
