[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "native-simulators/spawn-child-sim",
  "native-simulators/spawn-parent-sim",
  "native-simulators/exec-child-sim",
  "native-simulators/exec-parent-sim",
  "contracts/spawn-child",
  "contracts/spawn-parent",
  "contracts/exec-child",
  "contracts/exec-parent",
  "libs/spawn_cmd",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true

# TODO: Will be deleted after release
[replace]
# "ckb-std:0.15.3" = { git = "https://github.com/joii2020/ckb-std.git", rev = "5bd8c01" }
"ckb-testtool:0.13.1" = { git = "https://github.com/joii2020/ckb-testtool.git", rev = "feac46e" }
"ckb-x64-simulator:0.9.2" = { git = "https://github.com/joii2020/ckb-x64-simulator.git", rev = "24e5295" }

# "ckb-std:0.15.3" = { path = "deps/ckb-std" }
# "ckb-testtool:0.13.1" = { path = "deps/ckb-testtool" }
# "ckb-x64-simulator:0.9.2" = { path = "deps/ckb-x64-simulator" }
