[package]
name = "spawn-child-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spawn-child = { path = "../../contracts/spawn-child", features = ["native-simulator"] }
ckb-std = { version = "0.15.3", features = ["native-simulator"] }

[lib]
crate-type = ["cdylib"]
