[package]
name = "spawn-parent-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spawn-parent = { path = "../../contracts/spawn-parent", features = ["simulator"] }
ckb-std = { version = "0.15.1", features = ["simulator"] }

[lib]
crate-type = ["cdylib"]
