[package]
name = "c1-dbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
c1 = { path = "../", features = ["simulator"] }
ckb-std = { version = "0.15.1", features = ["simulator"] }

[lib]
crate-type = ["cdylib"]

[workspace]
[replace]
"ckb-std:0.15.3" = { path = "/Volumes/workspack/code/ckb/ckb-std" }